auth-service/src/main/java/com/example/auth/web/error/EmailAlreadyExistsException.java
package com.example.auth.web.error;

public class EmailAlreadyExistsException extends RuntimeException {
    public EmailAlreadyExistsException() { super("email_taken"); }
}
